--- a/empirical-evaluation-jupyter.ipynb
+++ b/empirical-evaluation-jupyter.ipynb
@@ -9,13 +9,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "from sklearn.utils import check_random_state\n",
+    "from sklearn.preprocessing import MinMaxScaler\n",
     "RAND = check_random_state(42)\n",
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "from torch.autograd import Variable\n",
+    "from torch.nn.parameter import Parameter\n",
+    "from collections import OrderedDict\n",
+    "import torch.nn.functional as F\n",
+    "from torch.utils.data import DataLoader,Dataset\n",
+    "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
+    "\n",
+    "\n",
+    "from dNDF import DeepNeuralDecisionForests\n",
     "\n",
     "\n",
     "from mvb import RandomForestClassifier as RFC\n",
@@ -27,79 +39,98 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "number of views 4\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "datasets  = Nhanes() # load Nhanes dataset\n",
-    "X,y = datasets.getData(return_list = True, domain_datasets=False)\n",
-    "print(\"number of views\",len(X))\n",
-    "\n",
-    "#concatenation of te views###############################\n",
-    "X_concat = np.concatenate((X[0],X[1],X[2],X[3]), axis=1)\n",
-    "###############################\n",
-    "\n",
-    "X_view1 = X[0]\n",
-    "X_view2 = X[1]\n",
-    "X_view3 = X[2]\n",
-    "X_view4 = X[3]"
+    "from sklearn.datasets import load_iris\n",
+    "scaler = MinMaxScaler()\n",
+    "X,y = load_iris(return_X_y=True)\n",
+    "X = scaler.fit_transform(X)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Training...\n",
-      "{'PBkl': 0.21566265460676134, 'TND': 0.261247355488244, 'CTD': 0.337451933224099, 'CCTND': 0.26446036648574606, 'CCPBB': 0.30771139774346745, 'CCPBUB': 0.28158620867232265, 'CCPBSkl': 0.2644603664857447, 'C1': 0.28069695010013507, 'C2': 0.27312333697704916, 'DIS': 0.2890231053727954}\n",
-      "Optimizing lambda...\n",
-      "mv_risk 0.04926455355293147 bound None\n",
-      "Optimizing TND...\n",
-      "mv_risk 0.026061736067951147 bound 0.25342511064154366\n",
-      "Optimizing DIS...\n",
-      "mv_risk 0.02780194737932462 bound 0.28523070520318683\n",
-      "Optimizing DIS with unlabeled\n",
-      "mv_risk 0.03190387404184791 bound 0.3042799284799073\n"
-     ]
+     "data": {
+      "text/html": [
+       "<style>#sk-container-id-11 {color: black;}#sk-container-id-11 pre{padding: 0;}#sk-container-id-11 div.sk-toggleable {background-color: white;}#sk-container-id-11 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-11 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-11 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-11 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-11 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-11 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-11 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-11 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-11 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-11 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-11 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-11 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-11 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-11 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-11 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-11 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-11 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-11 div.sk-item {position: relative;z-index: 1;}#sk-container-id-11 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-11 div.sk-item::before, #sk-container-id-11 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-11 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-11 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-11 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-11 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-11 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-11 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-11 div.sk-label-container {text-align: center;}#sk-container-id-11 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-11 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-11\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>DeepNeuralDecisionForests(depth=3, epochs=100, n_in_feature=4,\n",
+       "                          used_feature_rate=1)</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-11\" type=\"checkbox\" checked><label for=\"sk-estimator-id-11\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">DeepNeuralDecisionForests</label><div class=\"sk-toggleable__content\"><pre>DeepNeuralDecisionForests(depth=3, epochs=100, n_in_feature=4,\n",
+       "                          used_feature_rate=1)</pre></div></div></div></div></div>"
+      ],
+      "text/plain": [
+       "DeepNeuralDecisionForests(depth=3, epochs=100, n_in_feature=4,\n",
+       "                          used_feature_rate=1)"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "model = DeepNeuralDecisionForests(depth=3,n_in_feature = X.shape[1],used_feature_rate=1,epochs=100)\n",
+    "model.fit(X,y)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred = model.predict(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Training...\n",
-      "{'PBkl': 0.21146573848417, 'TND': 0.26387111156732357, 'CTD': 0.33793867140407097, 'CCTND': 0.2670981137235494, 'CCPBB': 0.31022498378251845, 'CCPBUB': 0.28476725975896333, 'CCPBSkl': 0.26709811372354897, 'C1': 0.2805235452850753, 'C2': 0.275080603908077, 'DIS': 0.2895510758834864}\n",
-      "Optimizing lambda...\n",
-      "mv_risk 0.05307644499689246 bound None\n",
-      "Optimizing TND...\n",
-      "mv_risk 0.03393412057178369 bound 0.25532047314213374\n",
-      "Optimizing DIS...\n",
-      "mv_risk 0.03799461363165524 bound 0.284886841887237\n",
-      "Optimizing DIS with unlabeled\n",
-      "mv_risk 0.041640770665009375 bound 0.29486541065071903\n"
-     ]
+     "data": {
+      "text/plain": [
+       "0.6666666666666666"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "from sklearn.metrics import accuracy_score\n",
+    "accuracy_score(y, y_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "       0, 0, 0, 0, 0, 0, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2,\n",
+       "       2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2,\n",
+       "       2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2,\n",
+       "       2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2,\n",
+       "       2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2])"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_pred"
+   ]
   },
   {
    "cell_type": "code",
