Added mvpb module, mvb won't be used anymore and will be removed later

--- a/empirical-evaluation-jupyter.ipynb
+++ b/empirical-evaluation-jupyter.ipynb
@@ -8,36 +8,90 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This Notebook contains everything necessary to reproduce the experiments in our paper:  \n",
+    "\n",
+    "*Multi-View Majority Vote Learning Algorithms: Direct Minimization of PAC-Bayesian Bounds*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Imports"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "import pandas as pd\n",
     "import numpy as np\n",
+    "from collections import OrderedDict\n",
+    "\n",
+    "# Scikit-learn\n",
+    "from sklearn import preprocessing\n",
     "from sklearn.utils import check_random_state\n",
-    "from sklearn.preprocessing import MinMaxScaler\n",
     "RAND = check_random_state(42)\n",
+    "\n",
+    "# torch\n",
     "import torch\n",
     "import torch.nn as nn\n",
-    "from torch.autograd import Variable\n",
-    "from torch.nn.parameter import Parameter\n",
-    "from collections import OrderedDict\n",
     "import torch.nn.functional as F\n",
+    "from torch.nn.parameter import Parameter\n",
+    "from torch.autograd import Variable\n",
     "from torch.utils.data import DataLoader,Dataset\n",
-    "from mvlearn.datasets import load_UCImultifeature\n",
     "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
     "\n",
     "\n",
-    "from dNDF import MultiViewBoundsDeepNeuralDecisionForests\n",
+    "from mvpb.dNDF import MultiViewBoundsDeepNeuralDecisionForests\n",
     "\n",
     "\n",
-    "from mvb import RandomForestClassifier as RFC\n",
-    "\n",
-    "\n",
-    "# Multi-view dataset : Nhanes 4 views https://wwwn.cdc.gov/nchs/nhanes/continuousnhanes/overview.aspx?BeginYear=2017\n",
-    "from data.datasets import (Nhanes, \n",
+    "# Import data\n",
+    "from mvlearn.datasets import load_UCImultifeature\n",
+    "from data.datasets import (SampleData,\n",
+    "                           Nutrimouse,\n",
     "                           train_test_split,\n",
-    "                           train_test_merge)"
+    "                           train_test_merge,\n",
+    "                           s1_s2_split)\n",
+    "from mvpb.util import uniform_distribution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "v=6\n",
+    "m=3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "emp_risks_views  = [[0.43455497, 0.50580645, 0.60298103],\n",
+    "                                    [0.43682796, 0.6295302,  0.54495159],\n",
+    "                                    [0.51780822, 0.44562334, 0.56420765],\n",
+    "                                    [0.33877551, 0.23584906, 0.42354533],\n",
+    "                                    [0.44179523, 0.44889503, 0.45938748],\n",
+    "                                    [0.44385027, 0.53288591, 0.4295393 ]]\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Load and prepare the multiview datasets"
    ]
   },
   {
@@ -67,7 +121,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "scaler = MinMaxScaler()\n",
+    "scaler = preprocessing.MinMaxScaler()\n",
     "for i in range(len(mv_data)):\n",
     "    mv_data[i] = scaler.fit_transform(mv_data[i])"
    ]
